# aware

./: .clang-format  CMakeLists.txt
2ndparty/: CMakeLists.txt
aware/alloc/: CMakeLists.txt  alloc_interface.hpp  memory_resource.hpp
aware/alloc/linear/: allocator.hpp
aware/alloc/log/: log.hpp
aware/alloc/memory_provider/: interface.hpp  malloc_provider.hpp
aware/ds/: CMakeLists.txt  vector.hpp
aware/ds/iterator/: common_iterator.hpp  common_iterator.tpp  cursor.hpp  tag.hpp
aware/ds/vector/: cursor.hpp
aware/math/: CMakeLists.txt
aware/math/concepts/: multiplicative.hpp
aware/math/power/: power.hpp
aware/meta/: CMakeLists.txt  conditional.hpp  decorating.hpp  verification.hpp
aware/meta/constants/: bool.hpp  integral.hpp
aware/meta/decorate/: remove_cv.hpp
aware/meta/decorating/: remove_cv.hpp
aware/meta/verification/: is_same.hpp  is_void.hpp
aware/meta/verify/: is_same.hpp  is_void.hpp
test/: CMakeLists.txt  main.cpp
test/alloc/linear/: CMakeLists.txt  alloc_unit.cpp
test/ds/iterator/: CMakeLists.txt  iter_patterns.cpp  unit.cpp
test/math/: CMakeLists.txt  power.cpp
